Drop Qute module as String Templates has been removed in JDK 23